Bug 78221 - EDITING: Cannot drag twice the same cell when editing formula
Summary: EDITING: Cannot drag twice the same cell when editing formula
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0 target:4.4.2
Keywords: bibisected, bisected, regression
: 86623 86901 87966 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-03 10:06 UTC by GerardF
Modified: 2015-12-17 08:00 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet with embedded step by step pictures (28.78 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-05-03 10:06 UTC, GerardF
Details

Note You need to log in before you can comment on or make changes to this bug.
Description GerardF 2014-05-03 10:06:13 UTC
Created attachment 98370 [details]
Spreadsheet with embedded step by step pictures

With 4.3.0 version, while editing a formula, cells reference are colored with the same color when a cell is refered twice (or more) in a formula.

See https://bugs.freedesktop.org/show_bug.cgi?id=52461

But now if you want to change reference in a formula with mouse, these borders allow to move the cell only once.

Detailed step by step in the attached file.
Comment 1 tommy27 2014-05-03 12:10:17 UTC
@GerardF

thank for your report and accurate test case.

some suggestions for this and future reports:

1- please define exactly the O/S you reproduce the bug.
you set "All" but you should also specify which one in the bug description

2- when reporting bugs in master builds please copy-&-paste exact build informations from the Help/About LibreOfficeDev menu

having said that I confirm issue under Win7x64 using Version: 4.3.0.0.alpha1+
Build ID: 0b03f7ed575838f90e6b1ebec3538a3a214f81fb
TinderBox: Win-x86@42, Branch:master, Time: 2014-04-30_02:30:23

it works correctly in LibO 4.2.3.3, hence regression

I add Calc expert to CC list.
Comment 2 GerardF 2014-11-23 15:45:16 UTC
*** Bug 86623 has been marked as a duplicate of this bug. ***
Comment 3 GerardF 2014-12-06 21:31:20 UTC
*** Bug 86901 has been marked as a duplicate of this bug. ***
Comment 4 Andras Timar 2015-01-20 17:45:42 UTC
The first bad commit could be any of: 5ff8e1d8e31f23492ee1ccc3af0b73791cd5101b 4987ae04cf5b2c5e3b5c1439cab31bcf7c132f8b

Regression from fix of Bug 52461. It is OK that the same cell in the formula should have the same color, but when we drag the cell, a new color should be assigned to the dragged cell, if it was referenced more than once in the formula.
Comment 5 Commit Notification 2015-03-05 08:20:31 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3381cb4a421bf390445b7dac9ea42f9ccaf3d875

Resolves tdf#78221 Cannot drag twice the same cell when editing formula

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-03-05 12:01:16 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36a808de7cb79e1c20c9e23d41b54a7c8399dcd3&h=libreoffice-4-4

Resolves tdf#78221 Cannot drag twice the same cell when editing formula

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 GerardF 2015-04-18 20:10:10 UTC
*** Bug 87966 has been marked as a duplicate of this bug. ***
Comment 8 Robinson Tryon (qubit) 2015-12-17 08:00:48 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]