Resolves tdf#78221 Cannot drag twice the same cell when editing formula

Change-Id: I69402778e68a2955bdda1ba2c9d31d9b10fb60cc
Reviewed-on: https://gerrit.libreoffice.org/14748
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>