sc/source/ui/app/rfindlst.cxx
@@ -18,6 +18,7 @@
  */
 
 #include "rfindlst.hxx"
+#include <tools/debug.hxx>
 
 // STATIC DATA -----------------------------------------------------------
 
@@ -29,28 +30,67 @@ static const ColorData aColNames[SC_RANGECOLORS] =
 
 ScRangeFindList::ScRangeFindList(const OUString& rName) :
     aDocName( rName ),
-    bHidden( false )
+    bHidden( false ),
+    nIndexColor( 0 )
 {
 }
 
 ColorData ScRangeFindList::Insert( const ScRangeFindData &rNew )
 {
-    for(std::vector<ScRangeFindData>::iterator it=maEntries.begin(); it!=maEntries.end(); ++it)
+    std::vector<ScRangeFindData>::iterator it=maEntries.begin();
+    for( ; it!=maEntries.end(); ++it)
     {
         if(it->aRef == rNew.aRef)
-        {
-            return it->nColorData;
-        }
+            break;
     }
     ScRangeFindData insertData(rNew);
-    insertData.nColorData = aColNames[maEntries.size() % SC_RANGECOLORS];
+    insertData.nColorData = ( it != maEntries.end() ? it->nColorData :
+                              ScRangeFindList::GetColorName( maEntries.size() ) );
     maEntries.push_back(insertData);
+    nIndexColor = maEntries.size() - 1;
     return insertData.nColorData;
 }
 
 ColorData ScRangeFindList::GetColorName( const size_t nIndex )
 {
     return aColNames[nIndex % SC_RANGECOLORS];
+}
+
+ColorData ScRangeFindList::FindColor( const ScRange& rRef, const size_t nIndex )
+{
+    sal_Int32 nOldCntr = 0;
+    sal_Int32 nNewCntr = 0;
+    ColorData nOldColor = 0;
+    ColorData nNewColor = 0;
+
+    DBG_ASSERT( (nIndex < maEntries.size()), "nIndex out of range!" );
+
+    nOldColor = maEntries[nIndex].nColorData;
+    nNewColor = ScRangeFindList::GetColorName( nIndex );
+
+    std::vector<ScRangeFindData>::iterator it=maEntries.begin();
+    for( ;it!=maEntries.end(); ++it)
+    {
+        if(it->aRef == rRef)
+            break;
+
+        if (it->nColorData == nOldColor )
+            nOldCntr++;
+
+        if (it->nColorData == nNewColor )
+            nNewCntr++;
+    }
+
+    if ( it != maEntries.end() )
+        return it->nColorData;
+
+    if ( nOldCntr == 1 )
+        return nOldColor;
+
+    if ( nNewCntr > 0 )
+        return ScRangeFindList::GetColorName( ++nIndexColor );
+
+    return nNewColor;
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
